--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-ui-router": "^0.2.13",
     "a0-angular-storage": "^0.0.6",
     "angular-jwt": "^0.0.7",
-    "moment": "~2.10.2"
+    "moment": "~2.10.2",
+    "angular-modal-service": "~0.6.6"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
