--- a/bower.json
+++ b/bower.json
@@ -13,11 +13,16 @@
     "a0-angular-storage": "^0.0.6",
     "angular-jwt": "^0.0.7",
     "moment": "~2.10.2",
-    "angular-modal-service": "~0.6.6"
+    "poc-services": "git@github.com:billidin/poc-services.git",
+    "lodash": "~3.9.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
   },
   "appPath": "app",
-  "moduleName": "billidPocPos"
+  "moduleName": "billidPocPos",
+  "resolutions": {
+    "a0-angular-storage": "0.0.11",
+    "angular": "1.4.0"
+  }
 }
